super-market-k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: super-market
  labels:
    name: super-market
    environment: production
